[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "treasury-cash-position-planner"
version = "1.0.0"
description = "Quantflow — OpenEnv treasury operations simulation environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["treasury", "liquidity", "cash-management", "openenv", "simulation", "rl"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
